[package]
name = "product-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "uuid", "bigdecimal", "postgres", "chrono", "migrate"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = "0.4.19"